--- a/index.html
+++ b/index.html
@@ -7,5 +7,21 @@
 </head>
 <body>
   <script src="/script/code.js"></script>
+  <header>
+    <nav>
+        <ul>
+            <li><a href="../index.html"></a> Home</li>
+            <li><a href="./about.html"></a>About</li>
+            <li><a href="#"></a>Review</li>
+            <li><a href="#"></a>Reach Me</li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <h2>About</h2>
+</main>
+<footer>
+    <p>Copyright &copy;2023</p>
+</footer>
 </body>
 </html>
